# AetherProxy

./: .gitignore  CLAUDE.md  LICENSE  Makefile  PRD.md  Plan.md  README.md  go.work.sum  lefthook.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml
backend/: Dockerfile.aether  README.md  go.mod  go.sum  install.sh  main.go
backend/api/: apiHandler.go  apiService.go  apiV2Handler.go  ratelimit.go  session.go  utils.go  wsHandler.go
backend/app/: app.go
backend/cmd/: admin.go  cmd.go  setting.go
backend/config/: config.go  name
backend/core/: box.go  endpoint.go  log.go  main.go  outbound_check.go  register_naive_stub.go  tracker_conn.go  tracker_stats.go
backend/cronjob/: WALCheckpointJob.go  checkCoreJob.go  cronJob.go  delStatsJob.go  depleteJob.go  portSyncJob.go  rotateShortIDJob.go  statsJob.go
backend/database/: backup.go  db.go  migrate.go
backend/logger/: logger.go  logger_throttle_test.go
backend/network/: auto_https_conn.go
backend/service/: acme.go  cert.go  client.go  config.go  discovery.go  endpoints.go  evasion.go  firewall_ufw.go  inbounds.go  node.go  (+13 more)
client-android/: analysis_options.yaml  flutter_analyze_current.txt  pubspec.yaml
client-desktop/: index.html  package.json  vite.config.ts
client-desktop/src-tauri/: Cargo.toml  tauri.conf.json
client-desktop/src-tauri/src/: lib.rs  main.rs
deploy/: Caddyfile  docker-compose.hostnet.yml  docker-compose.yml  install.sh
docs/: architecture.md  migration-sqlite-to-postgres.md  portsync-validation.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
(+345 files in other folders)
