[package]
name = "aetherproxy-desktop"
version = "0.1.0"
description = "AetherProxy Desktop Client"
authors = ["AetherProxy"]
edition = "2021"

# Prevents additional console window on Windows in release
default-run = "aetherproxy-desktop"

[lib]
name = "aetherproxy_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aetherproxy-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
